# InTracker

./: .cursorignore  .cursorrules  .env.example  .gitignore  AUTO-STATUS-UPDATE.md  AZURE-MCP-CONNECTION.md  CURSOR-INTEGRATION-ANALYSIS.md  CURSOR-INTEGRATION-SUMMARY.md  CURSOR-MCP-SETUP.md  CURSOR-RULES-SYSTEM.md  FEATURE-VS-ELEMENT-CLEANUP.md  FRONTEND-GUIDE.md  GITHUB-INTEGRATION-GUIDE.md  GITHUB-SETUP.md  GITHUB-TOKEN-SETUP.md  MCP-ARCHITECTURE-ANALYSIS.md  MCP-AZURE-CONNECTION.md  MCP-BACKEND-INTEGRATION-TODOS.md  MCP-USER-KEYS-DESIGN.md  PROJECT-STRUCTURE-VS-FEATURES.md  README.md  TEAM-BASED-PROJECTS-MIGRATION.md  TEAM-CONTEXT-MCP-DESIGN.md  TEST-RESULTS-AUTO-STATUS.md  TEST-RESULTS.md  TESTING_REALTIME.md  architecture.md  arculat.md  azure-container-apps-comparison.md  azure-deployment-guide.md  cleanup-features.md  create_asd_project.sh  create_github_repo.sh  docker-compose.yml  github-integration-analysis.md  mvp-roadmap.md  package-lock.json  package.json  quick_create_asd.py  restructure-project.md  (+13 more)
backend/: .dockerignore  .gitignore  Dockerfile  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  run_azure_migrations.py  run_migrations.sh  test_admin_endpoints.py  test_api.sh  test_audit_trail.py  test_realtime_api.py  test_realtime_updates.sh
backend/alembic/: env.py
backend/docs/: API_VERSIONING.md  ASYNC_AWAIT_OPTIMIZATION.md  DEPENDENCY_INJECTION.md  MIGRATION_OPTIMIZATION.md  OPENAPI_DOCUMENTATION.md  PERFORMANCE_PROFILING.md  SECURITY_AUDIT.md  TASK_QUEUE.md  (+11 more)
mcp-server/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
(+373 files in other folders)
